refactor: use virtual threads in RouterCLITest for improved concurrency